# visjs-panel

./: LICENSE  README.md  main.py  panel_visjs.js  pyproject.toml  visjs_panel.py
examples/: device_hierarchy.py  drop_file.py  graph_detail_tool.py  graph_detail_tool_2.py  group_filtering.py  hierarchy.py  images.py  rotating_circles.py  simple_network.py
src/visjs_panel/: __init__.py  panel_visjs.js  utils.py  visjs_panel.py
src/visjs_panel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
