[tool.poetry]
name = "visjs-panel"
version = "0.1.0"
description = ""
authors = ["MatPopp <matthias.popp92@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panel = "^1.4.4"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
